--- a/Gighub/Views/Gigs/Create.cshtml
+++ b/Gighub/Views/Gigs/Create.cshtml
@@ -1,13 +1,15 @@
-﻿@model Gighub.ViewModels.GigFormViewModel 
+﻿@model Gighub.ViewModels.GigFormViewModel
 @{
     ViewBag.Title = "Create";
 }
 
 <h2>Add a Gig</h2>
-<form>
+@using (Html.BeginForm("Create", "Gigs"))
+{
+
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
-        @Html.TextBoxFor(m => m.Venue,new {@class = "form-control" } )
+        @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
 
     </div>
     <div class="form-group">
@@ -22,11 +24,15 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Genre)
-        @Html.DropDownListFor(m => m.Genre,new SelectList(Model.Genres,"Id","Name"), "" , new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.Genre, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        </div>
+
+        <button type="submit" class="btn btn-primary">Save</button>
+
+        }
 
 
-        <button type="submit"  class="btn btn-primary">Save</button>
 
 
-</form>
+
 
