--- a/Gighub/Content/Site.css
+++ b/Gighub/Content/Site.css
@@ -22,3 +22,73 @@ select,
 textarea {
     max-width: 280px;
 }
+/*bootstrap override*/
+.navbar-inverse {
+    background-color: #ff4342; 
+    border-color: #ff4342;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #ffffff;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #ffffff;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+  
+    background-color: #f52524a6;
+}
+
+body{
+    font-size: 17px;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: "Lato" ,"Helvetica Neue", Helvetica, Arial, sans-serif;
+  
+}
+.form-group {
+    margin-bottom: 20px;
+}
+.form-control{
+    font-size: 17px;
+        padding: 20px 15px;
+        border-radius: 9px;
+}
+
+.form-control:focus{
+
+        border-color: #2196F3;
+        -webkit-box-shadow:none;
+            box-shadow:none;
+}
+.dropdown-menu{
+box-shadow:none;
+-webkit-box-shadow:none;
+
+}
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+     border-top-color: #FFFF;  
+    border-bottom-color: #FFFF;
+}
+.navbar-brand{
+    font-weight: 700; 
+}
+.btn{
+
+    font-size: 17px;
+     padding: 7px 20px;
+      border-radius: 9px;
+}
+
