--- a/Gighub/Views/Shared/_LoginPartial.cshtml
+++ b/Gighub/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,19 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+         
+        
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">@User.Identity.GetUserName() <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Gigs I am going</a></li>
+                <li><a href="#">Artist i am following</a></li>
+           
+                <li class="divider"></li>
+                <li><a href="#"><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></a></li>
+                 
+            </ul>
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
 }
