Implemented going to a Gig functionality

--- a/Gighub/Content/Site.css
+++ b/Gighub/Content/Site.css
@@ -90,11 +90,10 @@ box-shadow:none;
 }
 
 
-.btn{
-
-    font-size: 17px;
-     padding: 7px 20px;
-      border-radius: 9px;
+.btn {
+    /*font-size: 17px;
+    padding: 7px 20px;*/
+    border-radius: 9px;
 }
 
 /*Page level styles*/
