--- a/Gighub/Views/Shared/_LoginPartial.cshtml
+++ b/Gighub/Views/Shared/_LoginPartial.cshtml
@@ -11,11 +11,11 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">@User.Identity.GetUserName() <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><a href="#">Gigs I am going</a></li>
+                <li><a href="@Url.Action("Attending","Gigs")">Gigs I am going</a></li>
                 <li><a href="#">Artist i am following</a></li>
            
                 <li class="divider"></li>
-                <li><a href="#"><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></a></li>
+                <li> <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a> </li>
                  
             </ul>
         </li>
