--- a/Gighub/Views/Shared/_LoginPartial.cshtml
+++ b/Gighub/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,7 @@
             <ul class="dropdown-menu">
                 <li><a href="@Url.Action("Attending","Gigs")">Gigs I am going</a></li>
                 <li><a href="@Url.Action("Index","Followees")">Artist i am following</a></li>
+                <li><a href="@Url.Action("Mine","Gigs")">My Upcoming gigs</a></li>
            
                 <li class="divider"></li>
                 <li> <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a> </li>
