--- a/Gighub/Views/Gigs/GigForm.cshtml
+++ b/Gighub/Views/Gigs/GigForm.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Gighub.ViewModels.GigFormViewModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = @Model.Heading;
 }
 
-<h2>Add a Gig</h2>
-@using (Html.BeginForm("Create", "Gigs"))
+<h2>@Model.Heading</h2>
+@using (Html.BeginForm(Model.Action, "Gigs"))
 {
     <p class="alert alert-info">All Fields are <strong>required</strong></p>
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m=>m.Id)
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
         @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" , autofocus = "autofocus"})
@@ -16,7 +17,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Date)
-        @Html.TextBoxFor(m => m.Date, new { @class = "form-control" , placeholder = "eg 1 Jan 2015"})
+        @Html.TextBoxFor(m => m.Date, new { @class = "form-control" , placeholder = "eg 01 Jan 2015"})
         @Html.ValidationMessageFor(m => m.Date)
 
     </div>
@@ -31,7 +32,7 @@
         @Html.ValidationMessageFor(m => m.Genre)
         </div>
 
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary btn-lg">Save</button>
 
         }
 
