--- a/Gighub/Views/Gigs/Mine.cshtml
+++ b/Gighub/Views/Gigs/Mine.cshtml
@@ -22,12 +22,16 @@
             <div class="details">
                 <span class="artist">
                     @gig.Venue
-                    
+
                 </span>
                 <span class="genre">
                     @gig.Genre.Name
                 </span>
-                
+                <div class="actions">
+                    <a href="@Url.Action("Edit","Gigs",new { id = gig.Id } )">
+                            Edit   </a>
+                    <a href="#"> Delete   </a>
+                </div>
             </div>
 
         </li>
