--- a/Gighub/Views/Gigs/Mine.cshtml
+++ b/Gighub/Views/Gigs/Mine.cshtml
@@ -29,11 +29,62 @@
                 </span>
                 <div class="actions">
                     <a href="@Url.Action("Edit","Gigs",new { id = gig.Id } )">
-                            Edit   </a>
-                    <a href="#"> Delete   </a>
+                        Edit
+                    </a>
+                    <a href="#" class="js-cancel-gig" data-gig-id="@gig.Id">
+                        Delete
+                    </a>
                 </div>
             </div>
 
         </li>
     }
 </ul>
+
+
+@section scripts 
+    {
+    <script>
+    $(document).ready(function(){
+        $(".js-cancel-gig").click(function(e){
+            var link = $(e.target);
+              
+            bootbox.confirm({
+                message: "Are you sure you want to delete this gig?",
+                buttons: {
+                    confirm: {
+                        label: 'Yes',
+                        className: 'btn-danger',
+                      
+                    },
+                    cancel: {
+                        label: 'No',
+                        className: 'btn-default',
+                         
+                    }
+                },
+                callback: function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/gigs/" + link.attr("data-gig-id"),
+                            method: "DELETE"
+                        }).done(function () {
+                            link.parents("li").fadeOut(function ()
+                            { $(this).remove(); });
+                        }).fail(function () { alert("something failed"); });
+                    }
+                     
+                }
+            });
+                });
+           
+
+             
+        });
+
+
+     
+    </script>
+
+
+    }
