--- a/Gighub/Views/Shared/_LoginPartial.cshtml
+++ b/Gighub/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,13 @@
 
     <ul class="nav navbar-nav navbar-right">
          
-        
+        <li class="notifications">
+            <a href="#">
+                <i class="glyphicon glyphicon-globe">
+                    <span class="badge js-notifications-count hide"> </span>
+                </i>
+            </a>
+        </li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">@User.Identity.GetUserName() <b class="caret"></b></a>
             <ul class="dropdown-menu">
