Created Details page for gigs

--- a/Gighub/Views/Shared/Gigs.cshtml
+++ b/Gighub/Views/Shared/Gigs.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="details">
                 <span class="artist">
-                    @gig.Artist.Name
+                 @Html.ActionLink(@gig.Artist.Name, "Details", "Gigs", new { id = gig.Id },null);
                     @if (gig.IsCancelled)
                     {
                         <span class="label label-warning" >Cancelled </span>
