--- a/Gighub/Views/Shared/Gigs.cshtml
+++ b/Gighub/Views/Shared/Gigs.cshtml
@@ -51,7 +51,9 @@
                 </span>
                 @if (Model.ShowActions && !gig.IsCancelled)
                 {
-                    <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
+                    <button data-gig-id="@gig.Id"
+                             class="btn @(Model.Attendances.Contains(gig.Id) ? "btn-info" : "btn-default") 
+                            btn-sm pull-right js-toggle-attendance">Going?</button>
                 }
             </div>
 
@@ -65,15 +67,31 @@
     $(document).ready(function() {
         $(".js-toggle-attendance").click(function (e) {
             var button = $(e.target);
-            $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
-        .done(function () {
-            button.
-                removeClass("btn-default").
-                addClass("btn-info").
-                text("Going");
-        }).fail(function () {
-            alert("Something Failed !")
-        });
+            if (button.hasClass("btn-default")) {
+                $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
+       .done(function () {
+           button.
+               removeClass("btn-default").
+               addClass("btn-info").
+               text("Going");
+       }).fail(function () {
+           alert("Something Failed !")
+       });
+            } else {
+                $.ajax({
+                    url: "/api/attendances/" + button.attr("data-gig-id"),
+                    method: "DELETE"
+                })
+                .done(function () {
+                    button.removeClass("btn-info")
+                    .addClass("btn-default")
+                    .text("Going?");
+                })
+                .fail(function () {
+                    alert("something failed");
+                });
+            }
+           
         });
 
         $(".js-toggle-follow").click(function (e) {
