--- a/Gighub/Content/site.less
+++ b/Gighub/Content/site.less
@@ -51,6 +51,9 @@ textarea {
     margin-top: 80px;
 }
 /*bootstrap override*/
+.pull-right {
+    float: left !important;
+}
 .popover {
     box-shadow:none;
     -webkit-box-shadow:none;
@@ -183,7 +186,9 @@ h6,
         }
 
         .gigs > li .details .genre {
-            font-size: 15px;
+            font-size: 14px;
+            display:block;
+            margin-bottom:4px
         }
 
         .gigs > li .actions {
