--- a/Gighub/Views/Gigs/Details.cshtml
+++ b/Gighub/Views/Gigs/Details.cshtml
@@ -7,20 +7,34 @@
     @Model.Gig.Artist.Name
     @if (User.Identity.IsAuthenticated)
     {
-        if (Model.IsFollowing)
-        {<button class="btn btn-info">Following</button>
-        }
-        else
-        {
-            <button class="btn btn-default">Follow</button>
-        }
+         
+            <button class="btn @(Model.IsFollowing ? "btn-info" : "btn-default") btn-sm js-toggle-follow" data-user-id="@Model.Gig.ArtistId">@(Model.IsFollowing ? "Following" : "Follow") </button>
+            @*<button class="btn btn-info">Following</button>*@
+         
+         
     }
 
 </h2>
 
-<p>Performing at @Model.Gig.Venue On @Model.Gig.DateTime.ToString("d MMM") at @Model.Gig.DateTime.ToString("HH:mm") </p>
+
+
+<p>Performing at @Model.Gig.Venue On @Model.Gig.DateTime.ToString("d MMM yyyy") at @Model.Gig.DateTime.ToString("HH:mm") </p>
   
  @if (User.Identity.IsAuthenticated && Model.IsGoing)
  {
      <p>You Are going to the event</p>
  }
+ @section scripts{
+     <script>
+         $(document).ready(function () {
+
+             
+           FollowingsController.init()
+                });
+      
+
+    </script>
+    
+    
+    
+    }
