--- a/Gighub/Views/Shared/Gigs.cshtml
+++ b/Gighub/Views/Shared/Gigs.cshtml
@@ -19,7 +19,7 @@
 </div>
      
  }
-<ul class="gigs voffset4">
+<ul id="gigs" class="gigs voffset4">
 
     @foreach (var gig in Model.UpcomingGigs)
     {
@@ -35,26 +35,30 @@
             </div>
             <div class="details">
                 <span class="artist">
-                 @Html.ActionLink(@gig.Artist.Name, "Details", "Gigs", new { id = gig.Id },null);
+                 @Html.ActionLink(@gig.Artist.Name, "Details", "Gigs", new { id = gig.Id },null)
                     @if (gig.IsCancelled)
                     {
                         <span class="label label-warning" >Cancelled </span>
                     }
 
-                    @if (Model.ShowActions)
+                    @*@if (Model.ShowActions)
                     {
-                        <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
-                    }
+                        
+                    }*@
                 </span>
                 <span class="genre">
                     @gig.Genre.Name
+                   
                 </span>
                 @if (Model.ShowActions && !gig.IsCancelled)
                 {
                     <button data-gig-id="@gig.Id"
-                             class="btn @(Model.Attendances.Contains(gig.Id) ? "btn-info" : "btn-default") 
-                            btn-sm pull-right js-toggle-attendance">Going?</button>
+                            class="btn @(Model.Attendances.Contains(gig.Id) ? "btn-info" : "btn-default")
+                            btn-sm pull-right js-toggle-attendance">
+                        @(Model.Attendances.Contains(gig.Id) ? "Going" : "Going?")
+                    </button>
                 }
+               
             </div>
 
         </li>
@@ -65,45 +69,9 @@
 {
     <script>
     $(document).ready(function() {
-        $(".js-toggle-attendance").click(function (e) {
-            var button = $(e.target);
-            if (button.hasClass("btn-default")) {
-                $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
-       .done(function () {
-           button.
-               removeClass("btn-default").
-               addClass("btn-info").
-               text("Going");
-       }).fail(function () {
-           alert("Something Failed !")
-       });
-            } else {
-                $.ajax({
-                    url: "/api/attendances/" + button.attr("data-gig-id"),
-                    method: "DELETE"
-                })
-                .done(function () {
-                    button.removeClass("btn-info")
-                    .addClass("btn-default")
-                    .text("Going?");
-                })
-                .fail(function () {
-                    alert("something failed");
-                });
-            }
-           
-        });
+        GigsController.init("#gigs");
 
-        $(".js-toggle-follow").click(function (e) {
-            var button = $(e.target);
-            $.post("/api/followings", { followeeId: button.attr("data-user-id") })
-            .done(function () {
-                button.text("Following");
-            })
-            .fail(function () {
-                alert("Something Failed");
-            });
-        });
+       
     });
 </script>
     }
